example/lib/src/generated/errors/errors_localization_si.dart
// This file is generated, do not edit it manually!

// ignore: unused_import
import 'package:intl/intl.dart' as intl;
import 'errors_localization.dart';

// ignore_for_file: type=lint

/// The translations for Sinhala Sinhalese (`si`).
class ErrorsLocalizationSi extends ErrorsLocalization {
  ErrorsLocalizationSi([String locale = 'si']) : super(locale);

  @override
  String get error => 'දෝෂයක් සිදු විය';

  @override
  String get unexpectedError => 'අනපේක්ෂිත දෝෂයක් සිදුවිය';

  @override
  String get bugReportSentText => 'බග් වාර්තාව සාර්ථකව යවා ඇත.';
}
